--- a/AllstarCleanings.html
+++ b/AllstarCleanings.html
@@ -27,7 +27,7 @@
     <meta property="og:title" content="Home - AllstarCleanings">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="AllstarCleanings.html" data-home-page-title="AllstarCleanings" class="u-body u-overlap u-xl-mode"><header class=" u-clearfix u-header u-section-row-container" id="sec-e15d"><div class="u-section-rows">
+  <body class="u-body u-overlap u-xl-mode"><header class=" u-clearfix u-header u-section-row-container" id="sec-e15d"><div class="u-section-rows">
         <div class="u-hidden-sm u-hidden-xs u-section-row u-section-row-1" id="sec-3625">
           <div class="u-clearfix u-sheet u-sheet-1">
             <p class="u-text u-text-default u-text-1"><span class="u-icon u-text-white u-icon-1"><svg class="u-svg-content" viewBox="0 0 52 52" x="0px" y="0px" style="width: 1em; height: 1em;"><path style="fill:currentColor;" d="M38.853,5.324L38.853,5.324c-7.098-7.098-18.607-7.098-25.706,0h0
@@ -220,16 +220,6 @@ box-shadow: 0 2px 8px 0 rgba(128,128,128,1) !important
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-cdf3"><div class="u-clearfix u-sheet u-sheet-1">
         <p class="u-small-text u-text u-text-variant u-text-1">Creado por elabes</p>
       </div></footer>
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
-      </a>
-      <p class="u-text">
-        <span>created with</span>
-      </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
-    </section>
+
   </body>
 </html>
