--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ box-shadow: 0 2px 8px 0 rgba(128,128,128,1) !important
                     <span style="font-weight: 700;">ABOUT COMPANY</span>
                   </h2>
                   <h2 class="u-align-left u-custom-font u-text u-text-2"> Leading Cleaning Agency Bring Professionalism</h2>
-                  <p class="u-align-left u-custom-font u-text u-text-3"> Since our beginning in 2006 our major goal here at&nbsp;<span style="font-weight: 400;">ALL STAR Cleaning is</span>&nbsp;<span style="font-weight: 700;">customer satisfaction</span>. That is why when you call us, you know you can trust us to come and clean your house or business.
+                  <p class="u-align-left u-custom-font u-text u-text-3"> Since our beginning in 2006 our major goal here at&nbsp;<span style="font-weight: 400;">ALL STAR Cleaning is</span>&nbsp;<span style="font-weight: 700;">customer satisfaction</span>. That is why when you call us, you know you can trust that we wiil always deliver
                   </p>
                   <ul class="u-align-left u-custom-font u-custom-list u-file-icon u-text u-text-4">
                     <li>
@@ -198,7 +198,7 @@ box-shadow: 0 2px 8px 0 rgba(128,128,128,1) !important
                       </div> Fully licenced and insured
                     </li>
                   </ul>
-                  <div class="u-align-center u-border-1 u-border-grey-75 u-container-style u-gradient u-group u-radius-30 u-shape-round u-group-1">
+                  <div class="u-align-center u-container-style u-gradient u-group u-radius-30 u-shape-round u-group-1">
                     <div class="u-container-layout u-container-layout-2">
                       <p class="u-align-center-md u-align-center-sm u-align-center-xs u-custom-font u-text u-text-body-alt-color u-text-5">
                         <span style="font-weight: 700; font-size: 3.75rem;">15+<br>
@@ -225,53 +225,53 @@ box-shadow: 0 2px 8px 0 rgba(128,128,128,1) !important
           <div class="u-repeater u-repeater-1">
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-1">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1"><span class="u-file-icon u-icon u-icon-circle u-palette-3-light-2 u-icon-1"><img src="images/2797659.png" alt=""></span>
-                <h4 class="u-text u-text-palette-4-dark-2 u-text-2">Residential<br>Cleaning
+                <h4 class="u-align-center-xs u-text u-text-palette-4-dark-2 u-text-2">Residential<br>Cleaning
                 </h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-2">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2"><span class="u-file-icon u-icon u-icon-circle u-palette-3-light-2 u-icon-2"><img src="images/2553566.png" alt=""></span>
-                <h4 class="u-text u-text-palette-4-dark-2 u-text-3">Commercial<br>Cleaning
+                <h4 class="u-align-center-xs u-text u-text-palette-4-dark-2 u-text-3">Commercial<br>Cleaning
                 </h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-3">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3"><span class="u-file-icon u-icon u-icon-circle u-palette-3-light-2 u-icon-3"><img src="images/995053.png" alt=""></span>
-                <h4 class="u-text u-text-palette-4-dark-2 u-text-4">Office<br>cleaning
+                <h4 class="u-align-center-xs u-text u-text-palette-4-dark-2 u-text-4">Office<br>cleaning
                 </h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-4">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-4"><span class="u-file-icon u-icon u-icon-circle u-palette-3-light-2 u-icon-4"><img src="images/3030824.png" alt=""></span>
-                <h4 class="u-text u-text-palette-4-dark-2 u-text-5">window cleaning</h4>
+                <h4 class="u-align-center-xs u-text u-text-palette-4-dark-2 u-text-5">window cleaning</h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-5">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-5"><span class="u-file-icon u-icon u-icon-circle u-palette-3-light-2 u-icon-5"><img src="images/2877907.png" alt=""></span>
-                <h4 class="u-text u-text-palette-4-dark-2 u-text-6">pressure<br>washing
+                <h4 class="u-align-center-xs u-text u-text-palette-4-dark-2 u-text-6">pressure<br>washing
                 </h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-6">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-6"><span class="u-file-icon u-icon u-icon-circle u-palette-3-light-2 u-icon-6"><img src="images/685173.png" alt=""></span>
-                <h4 class="u-text u-text-palette-4-dark-2 u-text-7">floor<br>maintenance 
+                <h4 class="u-align-center-xs u-text u-text-palette-4-dark-2 u-text-7">floor<br>maintenance 
                 </h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-7">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-7"><span class="u-file-icon u-icon u-icon-circle u-palette-3-light-2 u-icon-7"><img src="images/2829961.png" alt=""></span>
-                <h4 class="u-text u-text-palette-4-dark-2 u-text-8">carpet<br>cleaning
+                <h4 class="u-align-center-xs u-text u-text-palette-4-dark-2 u-text-8">carpet<br>cleaning
                 </h4>
               </div>
             </div>
-            <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-8">
+            <div class="u-align-center-lg u-align-center-md u-align-center-sm u-align-center-xl u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-8">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-8"><span class="u-file-icon u-icon u-icon-circle u-palette-3-light-2 u-icon-8"><img src="images/2780399.png" alt=""></span>
-                <h4 class="u-text u-text-palette-4-dark-2 u-text-9">new construction</h4>
+                <h4 class="u-align-center-xs u-text u-text-palette-4-dark-2 u-text-9">new construction</h4>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-9">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-9"><span class="u-file-icon u-icon u-icon-circle u-palette-3-light-2 u-icon-9"><img src="images/3027796.png" alt=""></span>
-                <h4 class="u-text u-text-palette-4-dark-2 u-text-10">and more...<br>ask for it&nbsp;&nbsp;
+                <h4 class="u-align-center-xs u-text u-text-palette-4-dark-2 u-text-10">and more...<br>ask for it&nbsp;&nbsp;
                 </h4>
               </div>
             </div>
@@ -280,12 +280,12 @@ box-shadow: 0 2px 8px 0 rgba(128,128,128,1) !important
       </div>
     </section>
     <section class="u-clearfix u-image u-shading u-section-4" id="carousel_4a60" data-image-width="1600" data-image-height="898">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-sheet-1">
         <div class="u-align-center u-container-style u-expanded-width-xs u-group u-palette-3-light-1 u-group-1">
           <div class="u-container-layout u-valign-middle-xl u-valign-middle-xs u-container-layout-1">
             <h1 class="u-custom-font u-font-open-sans u-text u-text-1">Contact Us</h1>
             <div class="u-align-left u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-form u-form-1">
-              <form action="#" method="POST" class="u-clearfix u-form-spacing-28 u-form-vertical u-inner-form" style="padding: 10px" source="email" name="form">
+              <form action="#" method="POST" class="u-clearfix u-form-spacing-28 u-form-vertical u-inner-form" style="padding: 10px" source="joomla" name="form">
                 <div class="u-form-group u-form-name u-form-group-1">
                   <label for="name-5a14" class="u-form-control-hidden u-label" wfd-invisible="true">Name</label>
                   <input type="text" placeholder="Enter your Name" id="name-5a14" name="name" class="u-input u-input-rectangle u-white" required="">
@@ -313,8 +313,8 @@ box-shadow: 0 2px 8px 0 rgba(128,128,128,1) !important
           <div class="u-repeater u-repeater-1">
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-1">
               <div class="u-container-layout u-similar-container u-container-layout-2"><span class="u-file-icon u-icon u-palette-1-dark-1 u-text-palette-3-base u-icon-1"><img src="images/13.png" alt=""></span>
-                <h5 class="u-custom-font u-font-open-sans u-text u-text-2">office hours</h5>
-                <p class="u-text u-text-3">MONDAY - FRIDAY<br>7:00 - 17:00
+                <h5 class="u-align-center-sm u-align-center-xs u-custom-font u-font-open-sans u-text u-text-2">office hours</h5>
+                <p class="u-align-center-sm u-align-center-xs u-text u-text-3">MONDAY - FRIDAY<br>7:00 AM<br>5:00 PM
                 </p>
               </div>
             </div>
@@ -322,17 +322,17 @@ box-shadow: 0 2px 8px 0 rgba(128,128,128,1) !important
               <div class="u-container-layout u-similar-container u-container-layout-3"><span class="u-icon u-palette-1-dark-1 u-text-palette-3-base u-icon-2"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 513.64 513.64" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-9786"></use></svg><svg class="u-svg-content" viewBox="0 0 513.64 513.64" x="0px" y="0px" id="svg-9786" style="enable-background:new 0 0 513.64 513.64;"><g><g><path d="M499.66,376.96l-71.68-71.68c-25.6-25.6-69.12-15.359-79.36,17.92c-7.68,23.041-33.28,35.841-56.32,30.72    c-51.2-12.8-120.32-79.36-133.12-133.12c-7.68-23.041,7.68-48.641,30.72-56.32c33.28-10.24,43.52-53.76,17.92-79.36l-71.68-71.68    c-20.48-17.92-51.2-17.92-69.12,0l-48.64,48.64c-48.64,51.2,5.12,186.88,125.44,307.2c120.32,120.32,256,176.641,307.2,125.44    l48.64-48.64C517.581,425.6,517.581,394.88,499.66,376.96z"></path>
 </g>
 </g></svg></span>
-                <h5 class="u-custom-font u-font-open-sans u-text u-text-4">phone number</h5>
-                <p class="u-text u-text-5"> +1 ​(270) 791-5310</p>
+                <h5 class="u-align-center-sm u-align-center-xs u-custom-font u-font-open-sans u-text u-text-4">phone number</h5>
+                <p class="u-align-center-sm u-align-center-xs u-text u-text-5"> +1 ​(270) 791-5310</p>
               </div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-3">
               <div class="u-container-layout u-similar-container u-container-layout-4"><span class="u-file-icon u-icon u-palette-1-dark-1 u-text-palette-3-base u-icon-3"><img src="images/14.png" alt=""></span>
-                <h5 class="u-custom-font u-font-open-sans u-text u-text-6">whatsapp</h5>
-                <p class="u-text u-text-7"> +1 ​(270) 791-5310</p>
+                <h5 class="u-align-center-sm u-align-center-xs u-custom-font u-font-open-sans u-text u-text-6">whatsapp</h5>
+                <p class="u-align-center-sm u-align-center-xs u-text u-text-7"> +1 ​(270) 791-5310</p>
               </div>
             </div>
-            <div class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-4">
+            <div class="u-align-center-lg u-align-center-md u-align-center-xl u-container-style u-list-item u-repeater-item u-white u-list-item-4">
               <div class="u-container-layout u-similar-container u-container-layout-5"><span class="u-icon u-palette-1-dark-1 u-text-palette-3-base u-icon-4"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 512 512" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-9f82"></use></svg><svg class="u-svg-content" viewBox="0 0 512 512" x="0px" y="0px" id="svg-9f82" style="enable-background:new 0 0 512 512;"><g><g><path d="M507.49,101.721L352.211,256L507.49,410.279c2.807-5.867,4.51-12.353,4.51-19.279V121    C512,114.073,510.297,107.588,507.49,101.721z"></path>
 </g>
 </g><g><g><path d="M467,76H45c-6.927,0-13.412,1.703-19.279,4.51l198.463,197.463c17.548,17.548,46.084,17.548,63.632,0L486.279,80.51    C480.412,77.703,473.927,76,467,76z"></path>
@@ -342,8 +342,8 @@ box-shadow: 0 2px 8px 0 rgba(128,128,128,1) !important
 </g><g><g><path d="M331,277.211l-21.973,21.973c-29.239,29.239-76.816,29.239-106.055,0L181,277.211L25.721,431.49    C31.588,434.297,38.073,436,45,436h422c6.927,0,13.412-1.703,19.279-4.51L331,277.211z"></path>
 </g>
 </g></svg></span>
-                <h5 class="u-custom-font u-font-open-sans u-text u-text-8">Email</h5>
-                <p class="u-text u-text-9">
+                <h5 class="u-align-center-sm u-align-center-xs u-custom-font u-font-open-sans u-text u-text-8">Email</h5>
+                <p class="u-align-center-sm u-align-center-xs u-text u-text-9">
                   <a href="mailto:hello@theme.com" class="u-active-none u-border-1 u-border-palette-2-base u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-2-base u-btn-2">&nbsp;contact@allstarcleanings.com&nbsp;</a>
                 </p>
               </div>
