--- a/AllstarCleanings.html
+++ b/AllstarCleanings.html
@@ -280,11 +280,11 @@ box-shadow: 0 2px 8px 0 rgba(128,128,128,1) !important
       </div>
     </section>
     <section class="u-clearfix u-image u-shading u-section-4" id="carousel_4a60" data-image-width="1600" data-image-height="898">
-      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-xl u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-xl u-sheet-1">
         <div class="u-align-center u-container-style u-expanded-width-xs u-group u-palette-3-light-1 u-group-1">
-          <div class="u-container-layout u-valign-middle-xl u-valign-middle-xs u-container-layout-1">
+          <div class="u-container-layout u-valign-bottom-sm u-valign-bottom-xs u-valign-middle-xl u-container-layout-1">
             <h1 class="u-custom-font u-font-open-sans u-text u-text-1">Contact Us</h1>
-            <div class="u-align-left u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-form u-form-1">
+            <div class="u-align-left u-expanded-width-lg u-form u-form-1">
               <form action="#" method="POST" class="u-clearfix u-form-spacing-28 u-form-vertical u-inner-form" style="padding: 10px" source="joomla" name="form">
                 <div class="u-form-group u-form-name u-form-group-1">
                   <label for="name-5a14" class="u-form-control-hidden u-label" wfd-invisible="true">Name</label>
@@ -294,11 +294,15 @@ box-shadow: 0 2px 8px 0 rgba(128,128,128,1) !important
                   <label for="email-5a14" class="u-form-control-hidden u-label" wfd-invisible="true">Email</label>
                   <input type="email" placeholder="Enter a valid email address" id="email-5a14" name="email" class="u-input u-input-rectangle u-white" required="">
                 </div>
-                <div class="u-form-group u-form-message u-form-group-3">
+                <div class="u-form-group u-form-group-3">
+                  <label for="text-1517" class="u-form-control-hidden u-label"></label>
+                  <input type="text" placeholder="Enter a phone number" id="text-1517" name="phone" class="u-input u-input-rectangle u-white" required="required" maxlength="10">
+                </div>
+                <div class="u-form-group u-form-message u-form-group-4">
                   <label for="message-5a14" class="u-form-control-hidden u-label" wfd-invisible="true"></label>
                   <textarea placeholder="" rows="4" cols="50" id="message-5a14" name="message" class="u-input u-input-rectangle u-white" required=""></textarea>
                 </div>
-                <div class="u-align-center u-form-group u-form-submit u-form-group-4">
+                <div class="u-align-center u-form-group u-form-submit u-form-group-5">
                   <a href="#" class="u-active-palette-2-light-2 u-border-none u-btn u-btn-round u-btn-submit u-button-style u-hover-palette-2-light-1 u-palette-2-base u-radius-6 u-text-grey-90 u-text-hover-grey-90 u-btn-1">Submit</a>
                   <input type="submit" value="submit" class="u-form-control-hidden" wfd-invisible="true">
                 </div>
